# nifa-burn-app-api

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  alembic.ini  burn  docker-compose.yml  main.py  pyproject.toml  scheduler.py
app/: __init__.py
app/commands/: __init__.py  base.py  task_runner.py
app/config/: __init__.py  app.py  database.py
app/controllers/: registry.py
app/controllers/api/: main.py
app/database/: connection.py
app/database/migrations/: env.py  script.py.mako
app/database/migrations/versions/: 88f5448ba9d8_create_noaa_stations_table.py  9375d66131ad_add_collected_at_field_hourlyforecasts.py  9d2592ab5576_add_relative_humidity_to_hourlyforecasts.py  ae8c43c8470f_create_hourly_forecast_table.py  de40b6695d52_add_collected_at_field_to_noaa_stations.py
app/models/: __init__.py  geom.py  noaa_forecasts.py  noaa_grid.py  noaa_stations.py  wind_shed.py
app/routes/: __init__.py  api.py  web.py
app/storage/assets/: point_grid_12_5km.geojson
app/tasks/: __init__.py  noaa_scraper.py
