[tool.poetry]
name = "burn-grant-api"
version = "0.1.0"
description = "API for forecasting airsheds related to controlled burns and providing recommendations"
authors = ["Christopher Angel <cangel@uark.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "1.4.29"
ormar = {extras = ["postgresl"], version = "^0.10.24"}
orjson = "^3.6.6"
asyncpg = "^0.25.0"
databases = "0.5.4"
fastapi = {extras = ["dotenv"], version = "^0.73.0"}
uvicorn = {extras = ["standard"], version = "^0.17.4"}
noaa-sdk = "^0.1.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
