[tool.poetry]
name = "burn-grant-api"
version = "0.1.0"
description = "API for forecasting airsheds related to controlled burns and providing recommendations"
authors = ["Christopher Angel <cangel@uark.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
SQLAlchemy = "1.4.29"
ormar = {extras = ["orjson"], version = "^0.10.25"}
orjson = "^3.6.6"
asyncpg = "^0.25.0"
databases = "0.5.4"
fastapi = {extras = ["dotenv"], version = "^0.73.0"}
uvicorn = {extras = ["standard"], version = "^0.17.4"}
noaa-sdk = "^0.1.20"
Shapely = "^1.8.0"
scipy = "^1.8.0"
turfpy = "^0.0.7"
OSMPythonTools = "^0.3.3"
aiohttp = "^3.8.1"
aiodns = "^3.0.0"
APScheduler = "^3.9.1"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
